assets/style.css
* {
	padding: 0;
	margin: 0;
	font-family: 'Work Sans', sans-serif;
}

.package {
	overflow-wrap: anywhere;
}

.description, .package, .label {

    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

body {
	background: #eee;
}

.Recommended svg {
	color: #8BC34A !important;
}

.Advanced svg {
	color: #CDDC39 !important;
}

.Expert svg {
	color: #FFC107 !important;
}

.Unsafe svg {
	color: #FF5722 !important;
}

.tag {
	margin-top: 0.5rem;
	display: inline-block;
	padding: 0.4rem;
	background: #ccc;
	color: #fff;
	border-radius: 1rem;
}

.container {
	margin: 2rem;
	display: flex;
	flex-direction: column;
	padding: 0.5rem;
	border: 0.15rem solid #ccc;
	border-radius: 1rem;
	overflow-x: hidden;
	overflow-y: scroll;
	height: calc(100vh - 11rem);
}

.container::-webkit-scrollbar {
	display: none;
}
.container::-moz-scrollbar {
	display: none;
}

.container .entry {
	background: #eee;
	padding: 1rem;
	margin: 0.5rem;
	box-shadow: 0 0 1rem 0 rgba(0,0,0,0.15);
	border-radius: 1rem;
}

.container .entry .label {
	font-size: 1.5rem;
}

.search {
	text-align: center;
	font-size: 1.5rem;
	padding: 1rem;
	border-radius: 1.5rem;
	outline: none;
	background: #eee;
	border: 0.15rem solid #ccc;
}

.search-container {
	margin-top: 1.5rem;
	display: flex;
	justify-content: center;
}

.container .entry .package {
	color: #888;
}

.collapsed {
	height: 0;
	border: 0.15rem solid #eee;
	overflow: hidden;
	opacity: 0;
	transition: all 0.25s ease-out;
}

.collapsed-after {
	padding: 0 !important;
	margin: 0 !important;
	transition: all 0.25s ease-out;
}

.container .entry .description {
	margin: 0.5rem 0 0.5rem 0;
	padding: 0.5rem;
	border: 0.15rem solid #ccc;
	border-radius: 1rem;
	color: #333;
	transition: all 0.25s ease-out;
}

.container .entry svg {
	float: right;
	width: 2rem;
	height: 2rem;
	color: #888;
}

